--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
 
 
-    <title>Portfolio</title>
+    <title>Port-folio</title>
   </head>
   <body>
     
